--- a/dbrjs-vite/package.json
+++ b/dbrjs-vite/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^18.11.15",
     "dynamsoft-javascript-barcode": "9.6.1-iv-202212150202",
     "vue": "^3.2.16"
   },
